blurred BI-render, 2.72a regression? #42344

Closed
opened 2014-10-22 13:04:49 +02:00 by Wim den Boer · 13 comments

MacPro GT8800
OSX 10.10

Blender Version
Broken: 2.72a official build
Worked: 2.71 official build

Blurred render of a textured plane. See atached png's.
Used same blendfile and same user preferences.

Atached the test blendfile as well.

Tested on OSX 10.6 with same result.

blender2.71.png

blender2.72a.png

test_regression_2.72a.blend

MacPro GT8800 OSX 10.10 **Blender Version** Broken: 2.72a official build Worked: 2.71 official build Blurred render of a textured plane. See atached png's. Used same blendfile and same user preferences. Atached the test blendfile as well. Tested on OSX 10.6 with same result. ![blender2.71.png](https://archive.blender.org/developer/F119107/blender2.71.png) ![blender2.72a.png](https://archive.blender.org/developer/F119109/blender2.72a.png) [test_regression_2.72a.blend](https://archive.blender.org/developer/F119111/test_regression_2.72a.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @WimdenBoer

Added subscriber: @WimdenBoer
Member

Added subscriber: @LukasTonne

Added subscriber: @LukasTonne
Member

There are no textures in the test file, i cannot reproduce this. However, you may want to test a recent build from builder.blender.org . Unfortunately there were a number of regressions in 2.72a, this might just be one of them ...

There are no textures in the test file, i cannot reproduce this. However, you may want to test a recent build from [builder.blender.org ](https://builder.blender.org). Unfortunately there were a number of regressions in 2.72a, this might just be one of them ...
Author

Hi Lukas,

Sorry, forgot to pack the texture.
Here is a blendfile with texture. test_regression_2.72a-x.blend

I tested with a 2.72 build from yesterday evening from builder.blender.org with the same negative result.

Hi Lukas, Sorry, forgot to pack the texture. Here is a blendfile with texture. [test_regression_2.72a-x.blend](https://archive.blender.org/developer/F119232/test_regression_2.72a-x.blend) I tested with a 2.72 build from yesterday evening from builder.blender.org with the same negative result.

Added subscribers: @Sergey, @kevindietrich

Added subscribers: @Sergey, @kevindietrich

Just tried here on Linux 64, and I can confirm this worked in 2.71 (772af36), and is broken in master (179ad7d, and at least since 03ce9882).

@Sergey, I believe you're the one to summon here?

Just tried here on Linux 64, and I can confirm this worked in 2.71 (772af36), and is broken in master (179ad7d, and at least since 03ce9882). @Sergey, I believe you're the one to summon here?

Added subscriber: @quacker

Added subscriber: @quacker

It seems that the issue is with the Filter type under the texture's Image Sampling. By default, it's set to Box which produces sharp textures but in your file it's set to EWA which is more blurry. Not sure if the default was changed in 2.72 but you can always change it back to Box.

It seems that the issue is with the Filter type under the texture's Image Sampling. By default, it's set to Box which produces sharp textures but in your file it's set to EWA which is more blurry. Not sure if the default was changed in 2.72 but you can always change it back to Box.
Author

Hi Moe,

I did some test with the filter settings. When set to 'Box' 2.71 and 2.72 produce the same sharp result, so no regression for Box.
With 2.71 EWA produces a slightly sharper image, compared to Box, be it with a very small margin.

So that narrows down the 2.72 regression to the EWA filter mode.

B.T.W. the default setting in 2.71 and 2.72 is as far as I can see EWA.

Hi Moe, I did some test with the filter settings. When set to 'Box' 2.71 and 2.72 produce the same sharp result, so no regression for Box. With 2.71 EWA produces a slightly sharper image, compared to Box, be it with a very small margin. So that narrows down the 2.72 regression to the EWA filter mode. B.T.W. the default setting in 2.71 and 2.72 is as far as I can see EWA.
Sergey Sharybin self-assigned this 2014-10-31 09:33:34 +01:00

This issue was referenced by 7bb910cd4e

This issue was referenced by 7bb910cd4e97cfb39fd5b874d9d634b13e4cee51

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7bb910cd4e.

Closed by commit 7bb910cd4e.
Sign in to join this conversation.
6 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#42344
No description provided.